Wed Nov 17 10:14:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Writer_T.cpp:
          Throwing an internal error when the publisher on the
          DataWriter seems to be NIL. If nil, write_many will block and no info
          is returned to the user.

        * connectors/dds4ccm/impl/ndds/DataWriter_T.cpp:
          Implemented 'get_publisher' method.
          Added DDS4CCM_TRACE info to every method.

Wed Nov 17 09:26:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.idl:
        * connectors/ami4ccm/tests/ThreeComp/Base/ThreeComp.idl:
        Add no ami4ccm interface.

Wed Nov 17 09:24:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
          Resolved test errors regarding read_w_condition.

Wed Nov 17 09:12:08 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.cpp:
          Improved logging

        * connectors/dds4ccm/impl/Reader_T.cpp:
          Layout change.

        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
          Resolved test errors regarding take_w_condition.

Wed Nov 17 08:23:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.cpp:
          Resolved test errors.

Wed Nov 17 08:14:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
          Optimized logging parameters.

        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Resolved test errors.

Tue Nov 16 15:28:12 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp: